--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Kateryna Burkova. Thermostat
+subtitle: Introduction
+text: Computer Science program started for me back in 2016. I went in local community college and received a Computer Science associates degree. Unfortunately while I was in school there was no help to find jobs and I had a little knowledge how to get in the field. I kept studying and was a straight A student, but still had no knowledge or idea of who I want to be. Then I decided to go for my graduate program in SNHU and after first semester I got a job in IT. This semester will be my last in Computer Science and I will start my journey to Cybersecurity.
+During the program there was a lot of ups and downs. The three skills will be patience, asking questions, and reading the instructions. I named patience first because not everything will be working from the first try, and I needed to start over a project multiple times during this program. Asking questions is my go to, I will be posting questions to other students in general discussion, I will be emailing the professor if I need help at any time. Reading the instructions for the assignments through is a very important skill for me. I used to only read the requirements and then I found out that there is usually much more than requirements and I was missing a lot of things in some classes.
+
 ---
