--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Kateryna Burkova. Thermostat
-subtitle: Introduction
+title: Kateryna Burkova
+subtitle: Introduction to my project "Thermostat". Please, select explanation post to see explanation of the ePortfolio or select description to see the description of the code.
 ---
